--- a/.github/workflows/zatt.yaml
+++ b/.github/workflows/zatt.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: hello world
-        run: echo "Hello world"
+        run: echo "welcome to Zarttech"
         shell: bash
 
   goodbye:
